--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<meta name="author" content="Maximiliano Lopez"> 
+		<meta name="description" content="Amelie Boulangerie is the master of flavor combinations. The jewel-colored macarons come in the most tempting of flavors. Experience the difference at Amelie Boulangerie.">
 		<title>Amelie Boulangerie</title>
 		<link href="styles.css" rel="stylesheet">
 	</head>
@@ -20,6 +22,7 @@
 			</nav>
 			<main>
 				<h2>Experience the Difference</h2>
+				<img src ="C:\School\Git215\git215\m3\9-12 ica\m6-asurite-amelie-boulangerie\images\cafe-counter.jpg" alt ="picture of cafe counter with the text 'Experience the difference.'">
 				<p>Amelie Boulangerie is the master of flavor combinations. The jewel-colored macarons come in the most tempting of flavors. Experience the difference at Amelie Boulangerie.</p>
 			
 				<ul>
