--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 		<meta name="author" content="Maximiliano Lopez"> 
 		<meta name="description" content="Amelie Boulangerie is the master of flavor combinations. The jewel-colored macarons come in the most tempting of flavors. Experience the difference at Amelie Boulangerie.">
 		<title>Amelie Boulangerie</title>
-		<link href="styles.css" rel="stylesheet">
+		<link href="styles.css" rel="stylesheet"><link rel="shortcut icon" href="C:\School\Git215\git215\m3\9-12 ica\m6-asurite-amelie-boulangerie\images\favicon.ico" type="image/x-icon">
+		<link rel="icon" href="C:\School\Git215\git215\m3\9-12 ica\m6-asurite-amelie-boulangerie\images\favicon.ico" type="image/x-icon">
+
 	</head>
 	<body>
 		<header>
